<resources>
    <string name="app_name">Ticket Watcher</string>
    <string name="logo_decred">logo decred</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="register">Welcome!\nAfter this step you will follow your tickets!</string>
    <string name="scanner">Scanner Wallet ID</string>
    <string name="settings">Settings</string>
    <string name="extract">Extract</string>
    <string name="balance">Balance</string>
    <string name="error">= (</string>
    <string name="lived_ticket">Lived Ticket</string>
    <string name="total_voted">Total Voted</string>
    <string name="amount_in_live">Amount in Live</string>
    <string name="total_fee_spend">Total Fee Spend</string>
    <string name="total_reward">Total Reward</string>
    <string name="avg_days_to_voted">Avg Days to Voted</string>
    <string name="credit"><![CDATA[Made in Hell de Janeiro with <3]]></string>
    <string name="wallet">DseKigRxrH8cFb2DKWXBwQfCJysbPgWTPUu</string>
    <string name="donate">Donate</string>
    <string name="change_address">Change Address</string>
    <string name="d_oh_nit_s_not_my_address">D`oh!\nIt`s not my address</string>
    <string name="version">V 1.1.2b</string>
</resources>
