<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">


    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/error"
        android:textAlignment="center"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/all_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/reward_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/total_reward"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/avg_days_text"
                app:layout_constraintStart_toStartOf="@+id/avg_days_text"
                app:layout_constraintTop_toBottomOf="@+id/reward" />

            <TextView
                android:id="@+id/reward"
                fontPath="fonts/Inconsolata-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="0"
                android:textColor="@color/green"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/avg_days_text"
                app:layout_constraintStart_toStartOf="@+id/avg_days_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lived_ticket_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lived_ticket"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/total_fee_spend_text"
                app:layout_constraintStart_toStartOf="@+id/total_fee_spend_text"
                app:layout_constraintTop_toBottomOf="@+id/lived" />

            <TextView
                android:id="@+id/lived"
                fontPath="fonts/Inconsolata-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="0"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/lived_ticket_text"
                app:layout_constraintStart_toStartOf="@+id/lived_ticket_text"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/total_ticket_voted"
                fontPath="fonts/Inconsolata-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="0"
                android:textColor="@color/green"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/lived_ticket_text"
                app:layout_constraintStart_toStartOf="@+id/lived_ticket_text"
                app:layout_constraintTop_toBottomOf="@+id/lived_ticket_text" />

            <TextView
                android:id="@+id/total_ticket_voted_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_voted"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/total_ticket_voted"
                app:layout_constraintStart_toStartOf="@+id/total_ticket_voted"
                app:layout_constraintTop_toBottomOf="@+id/total_ticket_voted" />

            <TextView
                android:id="@+id/amount_live"
                fontPath="fonts/Inconsolata-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="0"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/total_ticket_voted"
                app:layout_constraintEnd_toEndOf="@+id/avg_days_text"
                app:layout_constraintStart_toStartOf="@+id/avg_days_text"
                app:layout_constraintTop_toBottomOf="@+id/reward_text" />

            <TextView
                android:id="@+id/amount_live_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/amount_in_live"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/avg_days_text"
                app:layout_constraintStart_toStartOf="@+id/avg_days_text"
                app:layout_constraintTop_toBottomOf="@+id/amount_live" />

            <TextView
                android:id="@+id/avg_days"
                fontPath="fonts/Inconsolata-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="0"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/avg_days_text"
                app:layout_constraintStart_toStartOf="@+id/avg_days_text"
                app:layout_constraintTop_toBottomOf="@+id/amount_live_text" />

            <TextView
                android:id="@+id/avg_days_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/avg_days_to_voted"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avg_days" />

            <TextView
                android:id="@+id/total_fee_spend"
                fontPath="fonts/Inconsolata-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="0"
                android:textColor="@color/orange"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/total_fee_spend_text"
                app:layout_constraintStart_toStartOf="@+id/total_fee_spend_text"
                app:layout_constraintTop_toBottomOf="@+id/total_ticket_voted_text" />

            <TextView
                android:id="@+id/total_fee_spend_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_fee_spend"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_fee_spend" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>